frontend/src/app.css
/* ... */
.pdf-export {
  width: 180px;
}


.indicator-handle {
  cursor: pointer;
}

  .modal-header {
    padding: 7px 15px;
  }

  .modal-header h3 {
    font-size: 18px;
  }


  #formblock {
    margin-bottom: 60px;
  }

  #saveblock {
    position: fixed;
    bottom: 0;
    right: 0;
    width: 83%;
    height: 45px;
    border-top: 1px solid #ccc;
    border-left: 1px solid #ccc;
    padding: 10px 20px;
    background-color: #f6f6f6;
    z-index: 5;
  }

.fa-thumb-tack, #reporting .fa-line-chart {
  color: #ccc;
  cursor: pointer;
}
.fa-thumb-tack:hover, #reporting .fa-line-chart:hover {
  color: #555;

}


td.empty {
  background-color: #eee;
}

td.empty > span {
  display: none;
}


  .revtbody .restore {
    display: none;
  }

  .revtbody:HOVER .restore, .revtbody .selected {
    display: table-row;
  }

  .table>tbody.revtbody+tbody.revtbody {
    border-top-width: 1px;
  }

  cc-indicator-group-by,
  indicator-group-by,
  project-group-by,
  select-indicator,
  indicator-filter .panel,
  olap-dimensions .panel

  {
    display: block;
    margin-bottom: 5px;
  }







general-reporting, cc-indicator-reporting, project-input-list {
  display: flex;
  height: 100vh;
  flex-direction: column;
  margin-top: -50px;
  padding-top: 50px;
  padding-bottom: 10px
}

/* your existing container */
general-table, cc-indicator-table {
  display: block;
  overflow: auto;
  flex: 1;
  border: 0 solid #ccc;
  border-top-width: 1px;
}

general-table table, cc-indicator-table table {
  overflow: hidden;
  border-collapse: separate !important;
  border-spacing: 0px !important;
  border-width: 0 !important;
}

general-table table thead, cc-indicator-table table thead {
}

general-table table td, general-table table th, cc-indicator-table table td, cc-indicator-table table th {
  border-top-width: 0 !important;
  border-left-width: 0 !important;
  background-color: white;
}

general-table table td:first-child, general-table table th:first-child, cc-indicator-table table td:first-child, cc-indicator-table table th:first-child {
  border-left-width: 1px !important;
}

.project-columns {
}

.project-menu {
  position: fixed;
  width: 200px;
  top: 45px;
}

.project-content {
  margin-left: 220px;
}


.panel-dashed {
  color: #666;
  border-color: #999;
  border-style: dashed;
}

.panel-dashed > .panel-heading {
  background-color: #f5f5f5;
  border-color: #999;
  border-bottom-style: dashed;
}



.panel-deleted {
  border-color: #b33;
  border-style: dashed;
}

.panel-deleted > .panel-heading {
  color: #b33;
  background-color: #f5dddd;
  border-color: #b33;
  border-bottom-style: dashed;
}






body {
  background-color: #fbfbfb !important;
}

.table {
  background-color: white;
}


/*
 * This class should be renamed, it is used everywhere
 * Unrelated to being the actual div inside 'project-content'.
 */

.project-content-inner {
  background-color: white;
  border-radius: 4px;
  border: 1px solid #ccc;
  padding: 10px;
  margin-bottom: 10px;
}


/*
 * Styling of input list table.
 */

.input-table-container {
  flex: 1;
  display: block;
  overflow: auto;
  border: 0 solid #ccc;
  border-top-width: 1px;
}


.input-table-container table {
  overflow: hidden;
  border-collapse: separate !important;
  border-spacing: 0px !important;
  border-width: 0 !important;
}

.input-table-container table td, .input-table-container table th {
  border-top-width: 0 !important;
  border-left-width: 0 !important;
  background-color: white;
}

.input-table-container table td:first-child, .input-table-container table th:first-child {
  border-left-width: 1px !important;
}

.input-table-container th:first-child, .input-table-container td:first-child {
  width: 15%;
}

project-input-list .headerField {
  min-width: 100px;
  width: 100%;
  height: 46px;
  line-height: 46px;
  overflow: hidden;
  text-align: center;
}

project-input-list .headerField div {
  display: inline-block;
  vertical-align: middle;
  line-height: 14px;
}

project-input-list .bodyField {
  height: 20px;
  text-align: center;
  overflow: hidden;
}

project-input-list .bodyField a {
  display: block;
  width: 100%;
}

project-input-list .bodyField2 {
  height: 24px;
  text-align: center;
  overflow: hidden;
}

